Add schedule editing, richer UI data, and Java 11 packaging